initial project import from KDevelop

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+/.eric5project/ts2.e4t
+/.eric5project/ts2.e4q
+/data/CVS/Entries
+/data/CVS/Repository
+/data/CVS/Root
 *.py[cod]
 
 # C extensions
